# Roteiro1-RoboticaUFPB

cpp_launch_example/: CMakeLists.txt  package.xml
cpp_launch_example/launch/: my_script_launch.py
cpp_parameters/: package.xml
cpp_parameters/src/: cpp_parameters_node.cpp
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
cpp_srvcli/: package.xml
cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
launch_tutorial/: CMakeLists.txt  package.xml  setup.py
launch_tutorial/launch/: example_event_handlers.launch.py  example_main.launch.py  example_substitutions.launch.py
more_interfaces/: CMakeLists.txt  package.xml
more_interfaces/src/: publish_address_book.cpp
polygon_base/: CMakeLists.txt  package.xml
polygon_base/include/polygon_base/: regular_polygon.hpp
polygon_base/src/: area_node .cpp  area_node.cpp
polygon_plugins/: CMakeLists.txt  package.xml  plugins.xml
polygon_plugins/src/: polygon_plugins.cpp
turtlesim_launch/launch/: turtlesim_mimic_launch.py
